--- a/41477-h/41477-h.htm
+++ b/41477-h/41477-h.htm
@@ -917,7 +917,7 @@ inauguration of a new order of knighthood. The new Lancastrian dynasty
 had not as yet secured a firm hold on the kingdom. John of Gaunt had
 never been taken very seriously as a statesman, and his son was but
 little known in his native land save for his short period of opposition
-to Richard<span class="fakesc">II.</span> Something must be done to give stability to the new royal
+to Richard <span class="fakesc">II.</span> Something must be done to give stability to the new royal
 house, and to borrow for it some of that outward respectability of
 appearance which usually only comes with age. One of the expedients to
 this end was the creation of a new order of knighthood, which should do
@@ -1055,7 +1055,7 @@ handed over from his earliest years to the tender mercies of one
 Katharine Puncherdon, who ministered to his bodily wants,<a name="FNanchor_30" id="FNanchor_30"></a><a href="#Footnote_30" class="fnanchor">[30]</a> while a
 certain priest, by name Thomas Bothwell, was appointed his tutor.<a name="FNanchor_31" id="FNanchor_31"></a><a href="#Footnote_31" class="fnanchor">[31]</a> Of
 his further education we know but little, though<a class="pagenum" name="Page_9" title="9"></a> it is very probable
-that he studied both rhetoric and [<em lang="la" xml:lang="la">res naturales</em> at Balliol College,
+that he studied both rhetoric and <em lang="la" xml:lang="la">res naturales</em> at Balliol College,
 Oxford.<a name="FNanchor_32" id="FNanchor_32"></a><a href="#Footnote_32" class="fnanchor">[32]</a></p>
 
 <div class="sidenote"><big>1413]</big> ACCESSION OF HENRY V.</div>
@@ -3106,7 +3106,7 @@ and sixteenth centuries. The citizen class never failed him. They did
 not<a class="pagenum" name="Page_85" title="85"></a> look to the upstart house which had forgotten its origin in the new
 title of Duke of Suffolk, but throughout his life they supported their
 &lsquo;Good Duke,&rsquo; and genuinely mourned his death. What is called
-statesmanship in others is dismissed as &lsquo;pandering to the populace in
+statesmanship in others is dismissed as &lsquo;pandering to the populace&rsquo; in
 Humphrey by those who cannot allow any good to reside in an unsuccessful
 politician, but it seems a more just estimate of this side of
 Gloucester&rsquo;s policy to acknowledge the foresight and wisdom of one who
@@ -5888,7 +5888,7 @@ letter to Bedford, however, have considerable interest. He stated that
 in it was to be found proof of his desire for a good government of the
 kingdom, and of his anxiety to escape provoking a civil war, arguments
 which came ill from one who had tried force and had failed; but his
-chief point was that Gloucester had encouraged rather than, restrained
+chief point was that Gloucester had encouraged rather than restrained
 the seditious action of some of the London artisans, who had resisted
 some wage regulations made by the mayor and aldermen with the consent of
 the Council.<a class="pagenum" name="Page_186" title="186"></a><a name="FNanchor_661" id="FNanchor_661"></a><a href="#Footnote_661" class="fnanchor">[661]</a></p>
@@ -9569,7 +9569,7 @@ are, but few and of doubtful importance. In Parliament, together with
 other lords, he was complained of as illegally exacting the royal right
 of purveyance,<a name="FNanchor_1078" id="FNanchor_1078"></a><a href="#Footnote_1078" class="fnanchor">[1078]</a> but his position as heir to the throne may form
 some excuse for his action, and the complaint was made at a time when
-his enemies were closing their toils around him. More detailed and
+his enemies were closing their coils around him. More detailed and
 circumstantial is an account of how one John Withorne had his lands
 seized by Gloucester, who claimed him as <em lang="la" xml:lang="la">nativus suus</em>, and was taken
 off to spend the remaining seven years of his pretended master&rsquo;s life in
@@ -9699,7 +9699,7 @@ Burgundian suggestion. Again, in 1415, he favoured an Armagnac alliance,
 and we<a class="pagenum" name="Page_319" title="319"></a> find him voicing the same principle when it was a question of a
 marriage for Henry <span class="fakesc">VI.</span> with a daughter of the Armagnac or Angevin House.
 In the matter of the war, too, he was consistent to the extent of folly.
-His active life had begun in the Trench wars; he had accompanied his
+His active life had begun in the French wars; he had accompanied his
 brother Henry <span class="fakesc">V.</span> on his expeditions to France. Henceforth he accepted
 the war as part of his political creed, and would not move one
 hair&rsquo;s-breadth therefrom. At a time when no useful advantage could be
@@ -10101,7 +10101,7 @@ declares that he was a &lsquo;miracle of wisdom and goodness.&rsquo;<a name="FNa
 seems to have been no divided opinion on the subject, probably due to
 his undoubted popularity with the people, and a writer who was perhaps
 born soon after the Duke&rsquo;s death speaks of his &lsquo;honourable fame and of
-his &rsquo;liberalite.<a name="FNanchor_1139" id="FNanchor_1139"></a><a href="#Footnote_1139" class="fnanchor">[1139]</a> Amongst his<a class="pagenum" name="Page_333" title="333"></a> contemporaries, too, there is no
+his &lsquo;liberalite.&rsquo;<a name="FNanchor_1139" id="FNanchor_1139"></a><a href="#Footnote_1139" class="fnanchor">[1139]</a> Amongst his<a class="pagenum" name="Page_333" title="333"></a> contemporaries, too, there is no
 lack of praise for his merits, though the unrestrained style of later
 centuries is modified. Mathieu de Coussy declares him to be the wisest,
 most powerful, and best loved prince in all England,<a name="FNanchor_1140" id="FNanchor_1140"></a><a href="#Footnote_1140" class="fnanchor">[1140]</a> and even
@@ -10192,7 +10192,7 @@ peer of no importance, who was never summoned to Parliament.<a name="FNanchor_11
 son dropped the title, and the last of the line married the daughter of
 Charles Brandon, Duke of Suffolk.<a name="FNanchor_1150" id="FNanchor_1150"></a><a href="#Footnote_1150" class="fnanchor">[1150]</a> Antigone survived her husband,
 and a year after his death we find<a class="pagenum" name="Page_336" title="336"></a> her the wife of Jean d&rsquo;Amancier,
-Esquire of the Horse to Charles vii of France.<a name="FNanchor_1151" id="FNanchor_1151"></a><a href="#Footnote_1151" class="fnanchor">[1151]</a> It is a strange
+Esquire of the Horse to Charles VII of France.<a name="FNanchor_1151" id="FNanchor_1151"></a><a href="#Footnote_1151" class="fnanchor">[1151]</a> It is a strange
 paradox that Humphrey&rsquo;s daughter should marry a man in the service of
 the King with whom he had advocated an endless war.</p>
 
@@ -12359,7 +12359,7 @@ literary life of his age more justly, but this also seems to have gone
 to that bourne from whence no knowledge returns. Apart from the zeal of
 the reformers and the carelessness of the ignorant, we doubtless owe the
 loss of many of these books to that discovery which has helped to
-perpetuate the<a class="pagenum" name="Page_410" title="410"></a>learning of the past. Humphrey stood on the threshold of
+perpetuate the<a class="pagenum" name="Page_410" title="410"></a> learning of the past. Humphrey stood on the threshold of
 the age of printing, that age when the multiplication of printed books
 cast their written forebears into the lumber-room. A manuscript of which
 the contents had been printed was then regarded as a cumbrous method of
